@@ -1,3 +1,7 @@
+2011-06-15  Ulrich Weigand  <ulrich.weigand@linaro.org>
+
+	* readelf.c (get_note_type): Handle NT_ARM_VFP.
+
 2011-06-13  Walter Lee  <walt@tilera.com>
 
 	* readelf.c: Include tilepro.h and tilegx.h.
