@@ -1,3 +1,7 @@
+2011-06-15  Ulrich Weigand  <ulrich.weigand@linaro.org>
+
+	* common.h (NT_ARM_VFP): Define.
+
 2011-06-13  Walter Lee  <walt@tilera.com>
 
 	* common.h: Add EM_TILEGX.
